--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,11 +1,30 @@
-node {  
+pipline {
+   agent any
+   options {
+        skipStagesAfterUnstable()
+   }
+   stages {
+   
     stage('Build') { 
-        // 
+        //
+        steps {
+        sh 'make'
+        }
     }
     stage('Test') { 
         // 
+        steps {
+        sh 'make check'
+        junit 'reports/**/*.xml'
+        }
+        
     }
     stage('Deploy') { 
         // 
+        steps {
+            sh 'make publish'
+        }
+        
     }
+  }
 }
